# trabalho-data-engineering-programming

./: MANIFEST.in  README.md  main.py  pyproject.toml
config/: config_reader.py
orchestrator/: pipeline.py
output/relatorio/: .part-00000-5934acbf-de5c-4c24-89de-db3c8528b350-c000.snappy.parquet.crc  .part-00000-790ae955-f31d-4646-a76a-fe600428284f-c000.snappy.parquet.crc  .part-00000-7baa78d6-c61c-4f6f-a20d-8491012ea5c8-c000.snappy.parquet.crc  .part-00001-5934acbf-de5c-4c24-89de-db3c8528b350-c000.snappy.parquet.crc  part-00000-5934acbf-de5c-4c24-89de-db3c8528b350-c000.snappy.parquet  part-00000-790ae955-f31d-4646-a76a-fe600428284f-c000.snappy.parquet  part-00000-7baa78d6-c61c-4f6f-a20d-8491012ea5c8-c000.snappy.parquet  part-00001-5934acbf-de5c-4c24-89de-db3c8528b350-c000.snappy.parquet
src/: sales.py
tests/: test_sales.py
