[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trabalho-data-engineering-programming"
version = "0.1.0"
description = "Projeto final de Data Engineering Programming com PySpark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark",
    "pytest"
]
